<resources>
    <string name="accept_first">Accept or decline the job first</string>
    <string name="accept_the_job">ACCEPT THE JOB</string>
    <string name="accepted_saved">Accepted. Saved on your phone, the office will get it.</string>
    <string name="allow">Allow</string>
    <string name="app_name">IBS Runner</string>
    <string name="back">Back</string>
    <string name="barcode_hint">Sample barcode or tube number</string>
    <string name="battery_msg">Allow the IBS Runner app to keep running in the background, otherwise the job alarm may not ring.</string>
    <string name="battery_title">Stop the phone from closing the app</string>
    <string name="bg_loc_msg">The desk needs to see where you are even when the screen is off. On the next screen choose Allow all the time.</string>
    <string name="bg_loc_title">Keep location on in the background</string>
    <string name="brand_sub">Indian Blood Service</string>
    <string name="brand_title">IBS RUNNER</string>
    <string name="btn_accept_job">Accept this job</string>
    <string name="btn_reached_centre">I have reached the blood centre</string>
    <string name="btn_reached_hosp">I have reached the hospital</string>
    <string name="btn_sample_collected">Sample collected</string>
    <string name="btn_sample_handed">Sample handed over</string>
    <string name="btn_start_back_centre">Start back to the blood centre</string>
    <string name="btn_start_centre">Start for the blood centre</string>
    <string name="btn_start_hosp">Start for the hospital</string>
    <string name="btn_take_photo">Take the handover photo</string>
    <string name="btn_units_collected">Blood units collected</string>
    <string name="call">Call</string>
    <string name="camera_not_open">Camera could not open</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_take_it">I cannot take it</string>
    <string name="ch_duty_desc">Shows that location sharing is on while you are punched in</string>
    <string name="ch_duty_name">Duty status</string>
    <string name="ch_job_desc">Rings when the desk assigns you a job</string>
    <string name="ch_job_name">New job alarm</string>
    <string name="chip_closed">CLOSED</string>
    <string name="chip_done">DONE</string>
    <string name="chip_live">LIVE</string>
    <string name="choose_language">Choose your language</string>
    <string name="collect_sample">Collect sample</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="could_not_sign_in">Could not sign in</string>
    <string name="day_today">Today</string>
    <string name="day_yesterday">Yesterday</string>
    <string name="decline">Decline</string>
    <string name="decline_hint">Why can you not take this job?</string>
    <string name="decline_title">Decline this job</string>
    <string name="deliver_blood">Deliver blood</string>
    <string name="desk_note">Desk note: %1$s</string>
    <string name="desk_told">The desk has been told</string>
    <string name="drop_at">Drop at</string>
    <string name="duty_break">On break</string>
    <string name="duty_free">Free</string>
    <string name="duty_off">Off duty</string>
    <string name="duty_on_trip">On a job</string>
    <string name="end_break">End break</string>
    <string name="enter_credentials">Enter your user ID and password</string>
    <string name="finish_job_first">Finish your running job before punching out</string>
    <string name="five_day_hours">5 DAY HOURS</string>
    <string name="footer_credit">Searvator IT Solutions</string>
    <string name="free_waiting">You are free.\nThe phone will ring when a job comes.</string>
    <string name="go_back">Go back</string>
    <string name="go_collect_sample">Go and collect a sample</string>
    <string name="go_deliver_blood">Go and deliver blood</string>
    <string name="hello_name">Hello, %1$s</string>
    <string name="hide">HIDE</string>
    <string name="job_done_blood">Blood delivered. Job done.</string>
    <string name="job_done_sample">Sample handed over. Job done.</string>
    <string name="job_finished">Job finished. Well done.</string>
    <string name="jobs_done">JOBS DONE</string>
    <string name="km_away">%1$s km away  •  about %2$d min</string>
    <string name="km_to_stop">%1$s km to %2$s  •  about %3$d min</string>
    <string name="km_today">KM TODAY</string>
    <string name="lang_en">English</string>
    <string name="lang_gu">ગુજરાતી</string>
    <string name="lang_hi">हिंदी</string>
    <string name="language">Language</string>
    <string name="language_changed">Language changed</string>
    <string name="later">Later</string>
    <string name="location_off_msg">Location (GPS) is off.\n\nTurn on location to punch in.</string>
    <string name="location_off_title">Turn on location</string>
    <string name="mock_msg">A fake location (Fake GPS) app is running on your phone.\n\nTurn it off, otherwise your report will be sent to the office (admin).</string>
    <string name="navigate">Navigate</string>
    <string name="net_failed">Could not reach the server.</string>
    <string name="net_saved_auto">No internet. Your work is saved on the phone and will be sent automatically.</string>
    <string name="net_slow">Server is slow to answer. Trying again.</string>
    <string name="net_unreachable">Cannot reach the server right now.</string>
    <string name="new_job">NEW JOB</string>
    <string name="next_step">Next step</string>
    <string name="no_jobs_yet">No jobs yet.</string>
    <string name="no_phone_number">No phone number on this job</string>
    <string name="no_photo_yet">No photo yet</string>
    <string name="not_runner">This app is only for runners. Desk staff should use the website.</string>
    <string name="note_location_shared">Location is being shared with the IBS desk</string>
    <string name="note_new_job">New job: %1$s</string>
    <string name="note_no_job">No job right now</string>
    <string name="note_on_duty">On duty</string>
    <string name="note_on_duty_free">On duty, free</string>
    <string name="note_waiting_upload">%1$d waiting to upload</string>
    <string name="odo_backwards">The meter cannot go backwards. Morning reading was %1$d km.</string>
    <string name="odo_end_sub">Take a photo of the meter again. The difference is your kilometres for the day.</string>
    <string name="odo_end_title">End of day meter</string>
    <string name="odo_hint_example">e.g. 42817</string>
    <string name="odo_morning_was">Morning reading was %1$d km. Today\'s number must be higher.</string>
    <string name="odo_numbers_only">Enter numbers only.</string>
    <string name="odo_photo_needed">The meter photo is needed. Tap the blue button above.</string>
    <string name="odo_reading_label">METER READING (KM)</string>
    <string name="odo_real_reading">Enter a real meter reading.</string>
    <string name="odo_start_sub">Take a clear photo of your bike meter, then type the number you see. This starts your day.</string>
    <string name="odo_start_title">Start of day meter</string>
    <string name="odo_too_far">That is %1$d km in one day. Check the number again.</string>
    <string name="odo_type_reading">Type the meter reading you can see in the photo.</string>
    <string name="offline_keep_pressing">No internet. Keep pressing the buttons as normal - everything is being saved.</string>
    <string name="offline_no_net">No internet right now. Your work is being saved on the phone - keep going as normal.</string>
    <string name="offline_pending">No internet. %1$d saved on your phone and will be sent automatically when the network returns.</string>
    <string name="offline_sending">Sending %1$d saved items to the office...</string>
    <string name="offline_steps_saved">%1$d saved on your phone and will reach the office automatically.</string>
    <string name="ok">OK</string>
    <string name="on_this_step">On this step</string>
    <string name="open_job">OPEN JOB</string>
    <string name="open_settings">Open settings</string>
    <string name="password">PASSWORD</string>
    <string name="photo_not_sent_msg">%1$s\n\nThe photo is still on your phone. Move to a spot with signal and press the button again.</string>
    <string name="photo_not_sent_title">Photo not sent</string>
    <string name="photo_not_taken">Photo not taken. The job needs a handover photo.</string>
    <string name="pick_up_from">Pick up from</string>
    <string name="punch_in">PUNCH IN</string>
    <string name="punch_out">PUNCH OUT</string>
    <string name="punch_out_first">Punch out before signing out</string>
    <string name="punch_to_start">Punch in to start your shift.</string>
    <string name="punched_in">Punched in</string>
    <string name="punched_out">Punched out</string>
    <string name="retake_photo">RETAKE PHOTO</string>
    <string name="ringing_for">Ringing for %1$s</string>
    <string name="runner_role">IBS Runner</string>
    <string name="running_job">RUNNING JOB</string>
    <string name="sample_barcode">Sample barcode: %1$s</string>
    <string name="save">Save</string>
    <string name="saved_on_phone">Saved on your phone. It will reach the office automatically.</string>
    <string name="server_address">SERVER ADDRESS</string>
    <string name="settings">Settings</string>
    <string name="show">SHOW</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_btn">SIGN IN</string>
    <string name="sign_in_sub">Use the ID and password the office gave you</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_msg">You will have to enter your user ID and password again.</string>
    <string name="sign_out_q">Sign out?</string>
    <string name="signing_in">SIGNING IN...</string>
    <string name="since_job_came">Since the job came</string>
    <string name="something_wrong">Something went wrong. Try again.</string>
    <string name="st_accepted">Job accepted</string>
    <string name="st_at_centre">Reached blood centre</string>
    <string name="st_at_hosp">Reached hospital</string>
    <string name="st_blood_delivered">Blood delivered</string>
    <string name="st_enroute_centre">On the way to blood centre</string>
    <string name="st_enroute_hosp">On the way to hospital</string>
    <string name="st_new_job">New job assigned</string>
    <string name="st_return_centre">Returning to blood centre</string>
    <string name="st_sample_handed">Sample handed over</string>
    <string name="st_sample_taken">Sample collected</string>
    <string name="st_units_loaded">Blood units loaded</string>
    <string name="stay">Stay</string>
    <string name="take_break">Take a break</string>
    <string name="take_meter_photo">TAKE METER PHOTO</string>
    <string name="this_job_finished">This job is finished</string>
    <string name="today_on_duty">TODAY ON DUTY</string>
    <string name="today_on_duty_closed">TODAY ON DUTY (SHIFT CLOSED)</string>
    <string name="took_time">took %1$s</string>
    <string name="try_again">Try again</string>
    <string name="unexpected_reply">Server sent an unexpected reply</string>
    <string name="units_collected_title">Units collected</string>
    <string name="units_count">%1$d unit(s)</string>
    <string name="units_hint">How many units are you carrying?</string>
    <string name="uploading_photo">Uploading photo...</string>
    <string name="user_id">USER ID</string>
    <string name="vpn_msg">Your phone has a VPN switched on.\n\nTurn the VPN off, otherwise your report will be sent to the office (admin).\n\nWork will only start once the VPN is off.</string>
    <string name="vpn_title">Turn off VPN</string>
    <string name="ward_bed">Ward / bed: %1$s</string>
    <string name="x_of_y_done">%1$d of %2$d done</string>
    <string name="your_jobs">YOUR JOBS</string>
    <string name="server_refused">The server did not accept that (%1$d)</string>
    <string name="upload_failed">Upload failed</string>
</resources>